# Deal-Viewer-Project

./: README.md
backend/: .env  pyproject.toml
backend/src/app/: main.py  seed.py
backend/src/app/core/: database.py  utils.py
backend/src/app/models/: deal.py  template.py
backend/src/app/routes/: deals.py  templates.py
backend/src/app/services/: projection.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: DealForm.jsx  DealList.jsx  DealView.jsx  TemplateForm.jsx  TemplateList.jsx
frontend/src/services/: api.js
