[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nassim",email = "Nassim.Touissi.Etu@univ-lemans.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
